# JET

./: CMakeLists.txt  README  README.md  config.h.cmake
cmake/modules/: FindFastJet.cmake  Summary.cmake  UseCython.cmake
examples/: CMakeLists.txt  fastjet_plugin_example.cpp  python_example.py
fastjet/: CMakeLists.txt  JETJetPlugin.cpp  JETJetPlugin.h  example.cpp
python/: CMakeLists.txt  cjetjet.pxd  jetjet.pyx  setup.py  test.py
sample/: dijet.txt  large_eta.txt  simple.txt  ttbar.txt
sample_output/: dijet_out.txt  large_eta_out.txt  simple_out.txt  ttbar_out.txt
src/: Combination.h  Debug.h  JetCone.h  JetDefinition.cpp  JetDefinition.h  JetFinder.cpp  JetFinder.h  Vector.cpp  Vector.h  example.cpp
